Add statement preview
